--- a/vendor.css
+++ b/vendor.css
@@ -78,7 +78,7 @@
     .hamburger svg {
       width: 24px;
       height: 24px;
-      stroke: #1e293b;
+      stroke: #0ea43a;
     }
 
     /* Dropdown menu */
