--- a/buyer.css
+++ b/buyer.css
@@ -70,7 +70,7 @@
     .hamburger svg {
       width: 24px;
       height: 24px;
-      color: #1e293b;
+      color: #0ea43a;
     }
 
     #dropdown-menu {
